--- a/jazzmin/templates/custom/show_events/show_events.html
+++ b/jazzmin/templates/custom/show_events/show_events.html
@@ -492,6 +492,25 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 });
 
+document.addEventListener('DOMContentLoaded', function() {
+  var tipoeventoSelect = document.getElementById('tipoevento');
+  
+  // Evento para filtrar las opciones al escribir en el campo de selección
+  tipoeventoSelect.addEventListener('input', function() {
+    var searchQuery = this.value.toLowerCase();
+    var options = this.getElementsByTagName('option');
+    for (var i = 0; i < options.length; i++) {
+      var option = options[i];
+      var text = option.text.toLowerCase();
+      if (text.includes(searchQuery)) {
+        option.style.display = '';
+      } else {
+        option.style.display = 'none';
+      }
+    }
+  });
+});
+
 </script>
 
   {% block scripts %}
